--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -2,11 +2,30 @@
 .hero-section-img {
     width: 50%;
 }
+
 .title {
     font-size: 50px;
 }
-.hero-section-btn{
+
+.hero-section-btn {
     width: 25%;
+}
+
+.customer-review-title {
+    font-weight: bold;
+    font-size: 35px;
+}
+
+.see-all-reviews-btn {
+    background: white;
+    border: 1px solid black;
+    border-radius: 10px;
+    width: 30%;
+}
+
+.see-all-reviews-btn:hover {
+    background: black;
+    color: white;
 }
 
 @media screen and (max-width: 576px) {
@@ -15,10 +34,12 @@
     .hero-section-img {
         width: 100%;
     }
+
     .title {
         font-size: 25px;
     }
-    .hero-section-btn{
+
+    .hero-section-btn {
         width: 50%;
     }
 }
