--- a/src/components/Review/Review.css
+++ b/src/components/Review/Review.css
@@ -5,3 +5,9 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     margin: 20px;
 }
+@media screen and (max-width: 576px) {
+    .review{
+        width: 100%;
+        margin: 10px 0;
+    }
+}
