--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -11,6 +11,14 @@
     width: 25%;
 }
 
+.hero-section-btn a{
+    text-decoration: none;
+    color: black
+}
+.hero-section-btn a:hover{
+    color: white;
+}
+
 .customer-review-title {
     font-weight: bold;
     font-size: 35px;
