--- a/src/components/Blogs/Blogs.css
+++ b/src/components/Blogs/Blogs.css
@@ -10,6 +10,7 @@
     width: 48%;
     margin: 20px;
     padding: 10px;
+    font-size: 20px;
 }
 @media screen and (max-width:576px) {
     .qna-div{
